--- a/style.css
+++ b/style.css
@@ -13,11 +13,6 @@ body {
 }
 
 .context-menu {
-  position: absolute;
-  z-index: 10;
-}
-
-.context-menu {
   display: none;
   position: absolute;
   z-index: 10;
@@ -57,4 +52,20 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.dotInfo{
+  display: none;
+  position: absolute;
+  z-index: 5;
+  padding: 5px 0;
+  width: 200px;
+  background-color: #fff;
+  border: solid 1px #dfdfdf;
+  box-shadow: 1px 1px 2px #cfcfcf;
+  border-radius: 10px;
+}
+
+.dotInfo--active {
+  display: block;
 }
